--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,14 +1,18 @@
 <ion-header>
   <ion-toolbar>
     <ion-title>
-      Ionic Blank
+      ToDos
     </ion-title>
+    <ion-buttons slot="end">
+      <ion-button (click)="addToDoDialog()">
+        <ion-icon name="add"></ion-icon>
+      </ion-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-  <div class="ion-padding">
-    The world is your oyster.
-    <p>If you get lost, the <a target="_blank" rel="noopener" href="https://ionicframework.com/docs/">docs</a> will be your guide.</p>
-  </div>
+  <ion-list>
+    <app-todo-item *ngFor="let item of toDoItems" [item]="item"></app-todo-item>
+  </ion-list>
 </ion-content>
