finished get request, started on post request

--- a/src/app/todo-item/todo-item.component.html
+++ b/src/app/todo-item/todo-item.component.html
@@ -1,4 +1,4 @@
 <ion-item>
   <ion-checkbox [(ngModel)]="item.isChecked"></ion-checkbox>
-  <ion-label>{{item.label}}</ion-label>
+  <ion-label>{{item.description}}</ion-label>
 </ion-item>
